--- a/empire_performance_coaching/.env.example
+++ b/empire_performance_coaching/.env.example
@@ -4,3 +4,11 @@ VITE_SUPABASE_ANON_KEY=
 
 # App
 VITE_APP_NAME=Empire Performance Coaching
+VITE_APP_VERSION=1.0.0
+
+# Error monitoring (Sentry)
+VITE_SENTRY_DSN=
+
+# Feature flags
+VITE_ENABLE_ANALYTICS=false
+VITE_ENABLE_PERFORMANCE_MONITORING=true
